changes colors in profile and footer

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
-  background: #3c4858;
-  border-top: solid #ef4343 1px;
+  background: #35363b;
+  // border-top: solid #ef4343 1px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -21,7 +21,7 @@
 }
 .footer-links a:hover {
   color: #ef4343;
-  opacity: 1;
+
 }
 .footer-links li {
   text-decoration: none;
