--- a/app/assets/stylesheets/musicians/_show.scss
+++ b/app/assets/stylesheets/musicians/_show.scss
@@ -1,6 +1,6 @@
 
 .profile-container{
-  background-color: #0a2239;
+  background-color: #27292e;
   color: white;
   padding-bottom: 50px;
 
@@ -17,24 +17,68 @@
   align-items: left;
   height: 250px;
   background-position:0px 0px;
-  border-bottom: solid #ef4343 1px;
+  // border-bottom: solid #ef4343 1px;
   background-size: cover !important;
+}
+
+.profile-info-right{
+  background-color: rgb(236, 236, 236);
+  padding: 30px 70px;
+  // padding-right: 70px;
+  // padding-left: 70px;
+  margin-right:70px;
+  margin-top: -50px;
+  color:#35363b;
+  position: relative;
+}
+.profile-social{
+  background-color: #ef4343;
+  display: flex;
+  // align-items: center;
+  justify-content: center;
+  // margin-left: -70px;
+  // margin-right: -70px;
+  position: absolute;
+  left: 0;
+  right: 0;
+}
+
+.profile-social .fa{
+  font-size: 20px;
+  margin: 10px;
+}
+.profile-social a {
+  color: #35363b;
+  text-decoration: none;
+  padding: 0px 10px;
+}
+.profile-social a:hover {
+  color: rgb(236, 236, 236);
+
+}
+.social{
 
 }
 
+
+
+
+
+
+
 .avatar-profile{
-  margin-top: -100px;
+  margin-top: -150px;
   margin-left: 50px;
   margin-right: 30px;
   // border-radius: 50%;
   // border: solid #ef4343 2px;
-
   border: solid #d3d0cb 2px;
-  border-radius: 15px;
-
+  // border-radius: 15px;
 }
 .friends-avatars{
-  border-color: white;
+  border-color: #d3d0cb;
+  display: flex;
+  padding: 5px;
 }
 .photo-name{
   display: flex;
@@ -50,29 +94,25 @@
   margin-top: 30px;
 
 }
-.profile-info-right{
-  margin-right:70px;
-}
 
-.about-content{
-  background-color: white;
-  border-right: solid #ef4343 2px;
-  border-bottom: solid #ef4343 2px;
-  padding: 30px;
-  border-radius: 15px;
-  color:  #0a2239;
 
-}
+
+// .about-content{
+//   background-color: white;
+//   border-right: solid #ef4343 2px;
+//   border-bottom: solid #ef4343 2px;
+//   padding: 30px;
+//   border-radius: 15px;
+//   color:  #0a2239;
+
+// }
 
 .skills{
   background-color: #ef4343;
-  padding: 10px;
-  border-radius: 10px;
+  padding: 5px;
+  border-radius: 3px;
   margin: 15px;
 }
 
-.friends-avatars {
-  display: flex;
-  padding: 5px;
-}
+
 
