--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -9,7 +9,7 @@
   </div>
 
   <div class="banner-content">
-    <h1>CONNECTING MUSICIANS</h1>
+    <h1>Connecting musicians</h1>
     <!-- <h3>Don’t dream of the gig, play it!</h3> -->
 
 
