--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,15 +1,15 @@
 /* Main navbar */
 .navbar-wagon {
   // box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
-  background: #0a2239;
+  background:rgba(39,41,46,0.6);
   transition: all 0.3s ease;
   height: 70px;
   padding: 0px 30px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  // position: absolute;
-  // width: 100vw;
+  position: absolute;
+  width: 100vw;
 }
 
 /* Logo */
