--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -3,6 +3,9 @@
 // Last version font:
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700');
 
+$body-font: "Open Sans", "sans-serif";
+$headers-font: "Open Sans", "sans-serif";
+
 
 // To put in css code:
 // font-family: 'Open Sans', sans-serif;
@@ -14,8 +17,7 @@
 
 @import url('https://fonts.googleapis.com/css?family=Rajdhani:300,400,500,600,700');
 // Define fonts for body and headers
-$body-font: "Rajdhani", "sans-serif";
-$headers-font: "Rajdhani", "sans-serif";
+
 
 // h2 {
 //    font-weight: bold !important;
