--- a/app/assets/stylesheets/projects/_comment.scss
+++ b/app/assets/stylesheets/projects/_comment.scss
@@ -1,17 +1,35 @@
 .comment{
   display:flex;
   align-items: center;
-  background-color: white;
-  justify-content: space-between;
+  background-color: rgb(236, 236, 236);
+  // justify-content: space-between;
   padding-left: 20px;
   padding-right: 20px;
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  margin-bottom: 10px;
 }
 
 .comment-content{
 text-align: left;
 flex: 0 0 60%;
+
 }
 
 .comment-avatar{
 border-radius: 50%;
+margin-right: 20px;
 }
+
+
+
+p {
+  color: #35363b;
+}
+
+.tipo-grey {
+  color: #9a9da2;
+}
+
+// .form-project{
+//  border: solid black;
+// }
