--- a/app/assets/stylesheets/projects/_show.scss
+++ b/app/assets/stylesheets/projects/_show.scss
@@ -1,10 +1,11 @@
 
 
 .participant {
-  border-radius: 50%;
-  border: solid #d3d0cb 2px;
+  // border-radius: 50%;
+  border: solid #d3d0cb 1px;
+  margin-right: 10px;
+  margin-bottom: 10px;
   // background: transparent;
-
 }
 
 .banner-project{
@@ -42,6 +43,8 @@
 flex: 0 0 350px;
 margin-right: 30px;
 background: white;
+padding:20px;
+color: #35363b;
 // border: solid #ef4343 2px;
 // border-radius: 15px;
 box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
@@ -57,9 +60,11 @@ padding-left: 30px;
 }
 
 .wrapper{
- background: rgb(236, 236, 236);
+ // background: rgb(236, 236, 236);
+ background: #27292e;
+
 }
 
 .project-content{
- padding:20px;
+color: #35363b;
 }
