--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,28 +1,27 @@
 
 <!-- Header with Background Image -->
 <div class="wrapper">
-<div class="banner banner-project" style="background-image: linear-gradient(-225deg, rgba(25,25,25,0.6) 0%, rgba(178,12,12,0.6) 70%),url('<%= cl_image_path(@project.picture) %>')">
+<div class="banner banner-project" style="background-image: linear-gradient(-225deg, rgba(25,25,25,0.6) 0%, rgba(178,12,12,0.6) 98%),url('<%= cl_image_path(@project.picture) %>')">
 
 </div>
-
 
     <!-- Page Content -->
     <div class="content-projects">
       <div class="project-left">
-      <%= cl_image_tag @project.picture, width: 350, height: 350, crop: :fill, class: "project-picture"  %>
+      <div class="project-background">
+        <%= cl_image_tag @project.picture, width: 350, height: 350, crop: :fill, class: "project-picture"  %>
 
-      <div class="project-content">
-       <h2 class="mt-4"><%= @project.title.upcase %></h2>
-       <p><%= @project.description %></p>
+        <div class="project-content">
+         <h2 class="mt-4"><%= @project.title.upcase %></h2>
+         <p><%= @project.description %></p>
 
+         <h2 class="mt-4">WHEN/ WHERE</h2>
 
-
-       <h2 class="mt-4">WHEN/ WHERE</h2>
-
-        <p><span class="tipo-grey">STARTS AT</span>  <%= @project.start_time.to_formatted_s(:long_ordinal) %></p>
-        <p><span class="tipo-grey">ENDS AT</span>  <%= @project.end_time.to_formatted_s(:long_ordinal) %></p>
-        <p><span class="tipo-grey">LOCATION</span>  <%= @project.location %></li>
-        <!-- <li><%= cl_image_tag(@project.user.avatar) %></li> -->
+          <p><span class="tipo-grey">STARTS AT</span>  <%= @project.start_time.to_formatted_s(:long_ordinal) %></p>
+          <p><span class="tipo-grey">ENDS AT</span>  <%= @project.end_time.to_formatted_s(:long_ordinal) %></p>
+          <p><span class="tipo-grey">LOCATION</span>  <%= @project.location %></li>
+          <!-- <li><%= cl_image_tag(@project.user.avatar) %></li> -->
+      </div>
       </p>
 
       <% if current_user == @project.user %>
