--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,10 +1,10 @@
 // Import Google fonts
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800');
-// @import url('https://fonts.googleapis.com/css?family=Rajdhani:300,400,500,600,700');
+@import url('https://fonts.googleapis.com/css?family=Rajdhani:300,400,500,600,700');
 // @import url('https://fonts.googleapis.com/css?family=Oswald:300,400,500,600,700');
 // Define fonts for body and headers
 $body-font: "Open Sans", "sans-serif";
-$headers-font: "Open Sans", "sans-serif";
+$headers-font: "Rajdhani", "sans-serif";
 
 h1 h2 h3 h4 h5 {
    font-weight: bold !important;
