--- a/app/assets/stylesheets/musicians/_show.scss
+++ b/app/assets/stylesheets/musicians/_show.scss
@@ -2,11 +2,12 @@
 .profile-container{
   background-color: #27292e;
   color: white;
-  padding-bottom: 50px;
+  padding-bottom: 70px;
 
 }
 .profile-content{
   display:flex;
+
 
 }
 
@@ -56,7 +57,8 @@
   color: rgb(236, 236, 236);
 
 }
-.social{
+.media{
+  margin-bottom: 50px;
 
 }
 
