--- a/app/views/musicians/show.html.erb
+++ b/app/views/musicians/show.html.erb
@@ -3,7 +3,7 @@
 <div class="profile-container">
 
   <div class="profile-info">
-    <div class="banner-profile" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%),url('<%= cl_image_path(@musician.banner) %>');">
+    <div class="banner-profile" style="background-image: linear-gradient(-225deg, rgba(25,25,25,0.6) 0%, rgba(178,12,12,0.6) 98%),url('<%= cl_image_path(@musician.banner) %>');">
     </div>
     <div class="photo-name" >
       <%= cl_image_tag @musician.avatar, height: 295, width: 230,  crop: :thumb,  class: "avatar-profile" %>
@@ -66,11 +66,7 @@
         <div class= "media">
           <% if @musician.media %>
           <!-- <h4 class="mt-4">Media:</h4> -->
-
-          <p><%= @musician.media %></p>
-
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/<%= @musician[:media].split("/").last %>" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-
+            <iframe width="100%" height="315" src="https://www.youtube.com/embed/<%= @musician.media.split("/").last.gsub("watch?v=", '') %>" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
           <% end %>
         </div>
 
