Favicon and else setup

--- a/app/views/musicians/index.html.erb
+++ b/app/views/musicians/index.html.erb
@@ -1,5 +1,9 @@
-<div class=results-container>
-  <h1 class="text-center">This is the result of your search:</h1>
-   <%= render 'musicians/cards' %>
-   <%= render 'projects/cards' %>
+<div>
+  <div class=results-container>
+    <h1 class="text-center">This is the result of your search:</h1>
+     <h2 style=color:gray>Musicians</h2>
+     <%= render 'musicians/cards' %>
+     <h2 style=color:gray>Projects</h2>
+     <%= render 'projects/cards' %>
+  </div>
 </div>
