fixed error in the style after merge

--- a/app/assets/stylesheets/components/_messages.scss
+++ b/app/assets/stylesheets/components/_messages.scss
@@ -1,4 +1,4 @@
-body { padding-top:30px;}
+// body { padding-top:30px;}
 .widget .panel-body { padding:0px; }
 .widget .list-group { margin-bottom: 0; }
 .widget .panel-title { display:inline }
