--- a/app/assets/stylesheets/projects/_comment.scss
+++ b/app/assets/stylesheets/projects/_comment.scss
@@ -5,6 +5,7 @@
   // justify-content: space-between;
   padding-left: 20px;
   padding-right: 20px;
+  border-radius:16px;
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   margin-bottom: 10px;
 }
