--- a/app/assets/stylesheets/projects/_show.scss
+++ b/app/assets/stylesheets/projects/_show.scss
@@ -49,7 +49,7 @@ color: #35363b;
 }
 
 .project-background {
-  background: white;
+background: white;
 padding:20px;
 box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 
@@ -77,4 +77,8 @@ margin-bottom:70px;
 
 .project-content{
 color: #35363b;
+}
+
+.map{
+  margin-bottom: 70px;
 }
