added icons to navbar

--- a/app/assets/stylesheets/musicians/_show.scss
+++ b/app/assets/stylesheets/musicians/_show.scss
@@ -8,9 +8,6 @@
 }
 .profile-content{
   display:flex;
-
-
-
 }
 
 .banner-profile{
@@ -64,12 +61,6 @@
 
 }
 
-
-
-
-
-
-
 .avatar-profile{
   margin-top: -150px;
   margin-left: 50px;
@@ -102,7 +93,8 @@
 
 
 
-// .about-content{
+.about-content{
+  margin-bottom:50px;
 //   background-color: white;
 //   border-right: solid #ef4343 2px;
 //   border-bottom: solid #ef4343 2px;
@@ -110,7 +102,7 @@
 //   border-radius: 15px;
 //   color:  #0a2239;
 
-// }
+}
 
 .skills{
   background-color: #ef4343;
