--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -17,9 +17,13 @@
 $body-font: "Open Sans", "sans-serif";
 $headers-font: "Rajdhani", "sans-serif";
 
-h1 h2 h3 h4 h5 {
-   font-weight: bold !important;
+a{
+  font-family: "Rajdhani","sans-serif";
 }
+
+// h1 h2 h3 h4 h5 {
+//    font-weight: bold !important;
+// }
 
 
 // h2 {
