--- a/app/views/musicians/show.html.erb
+++ b/app/views/musicians/show.html.erb
@@ -58,7 +58,7 @@
       <div class="profile-info-right">
 
         <div class= "about">
-          <h3 class="mt-4">About me:</h3>
+          <h3 class="mt-4">ABOUT ME</h3>
           <p class="about-content" ><%= @musician.about %></p>
         </div>
 
@@ -66,7 +66,7 @@
         <div class= "media">
           <% if @musician.media %>
           <!-- <h4 class="mt-4">Media:</h4> -->
-            <iframe width="100%" height="315" src="https://www.youtube.com/embed/<%= @musician.media.split("/").last.gsub("watch?v=", '') %>" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe width="100%" height="300" src="https://www.youtube.com/embed/<%= @musician.media.split("/").last.gsub("watch?v=", '') %>" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
           <% end %>
         </div>
 
