--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -17,14 +17,38 @@
 
 
       <!-- Links when logged in -->
-      <%= link_to "Log out", destroy_user_session_path,class: "navbar-wagon-item navbar-wagon-link",  method: :delete %>
+
+
+      <%= link_to "CREATE A PROJECT", new_project_path, class: "navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to connections_path, class: "navbar-wagon-item navbar-wagon-link"  do%>
+        <i class="fa fa-users"></i>
+        <span><%= current_user.pending_friends.length %></span>
+      <% end %>
+      <%= link_to conversations_path, class: "navbar-wagon-item navbar-wagon-link"  do%>
+        <i class="fa fa-envelope"></i>
+        <span><%= Message.where.not(user: current_user).where(read: false).count %></span>
+      <% end %>
+
+      <%= link_to destroy_user_session_path, class: "navbar-wagon-item navbar-wagon-link", method: :delete do%>
+          <i class="fa fa-sign-out"></i>
+      <% end %>
+
+      <%#= link_to "Log out", destroy_user_session_path,class: "navbar-wagon-item navbar-wagon-link",  method: :delete %>
 
 
 
-      <%= link_to "Create a project", new_project_path, class: "navbar-wagon-item navbar-wagon-link" %>
-      <%= link_to "Messages: #{Message.where.not(user: current_user).where(read: false).count}", conversations_path, class: "navbar-wagon-item navbar-wagon-link" %>
-      <%= link_to "Connection requests: #{current_user.pending_friends.length}", connections_path, class: "navbar-wagon-item navbar-wagon-link"%>
+      <!-- a: position: relative;
 
+      span: {
+    position: absolute;
+    top: -5px;
+    right: 18px;
+    font-size: 0.8em;
+    color: #bcbcbc;
+    font-weight: bold;
+  -->
+
+      <%#= link_to "Connection requests: #{current_user.pending_friends.length}", connections_path, class: "navbar-wagon-item navbar-wagon-link"%>
 
 
       <!-- Avatar with dropdown menu -->
