Changed font weight and add more tex in content of the banner(I continued in this branch because the code is broken in master)

--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -9,8 +9,8 @@
   </div>
 
   <div class="banner-content">
-    <h1>Connecting musicians</h1>
-    <!-- <h3>Don’t dream of the gig, play it!</h3> -->
+    <h1>CONNECTING MUSICIANS</h1>
+    <h3>Don’t dream of the gig, play it!</h3>
 
 
 
