--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -9,9 +9,16 @@
   justify-content: center;
 }
 .banner h1 {
-  font-size: 50px;
-  font-weight: bold;
+  font-size: 60px;
+  // font-weight: bold;
   text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
+}
+.banner h3{
+  font-family: "Open Sans", "sans-serif";
+  font-weight: lighter;
+  margin-top: 10px;
+  margin-bottom: 20px;
+
 }
 .banner p {
   font-size: 25px;
