--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -16,7 +16,12 @@
 
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,200,200italic,300,300italic,400italic,600,600italic,700,700italic,900,900italic);
 
-
+// .container{
+//   background-color: black;
+// }
+// .row{
+//   background-color: #ECECEC;
+// }
 .heading-title {
     margin-bottom: 70px;
     margin-top: 70px
