--- a/app/views/musicians/index.html.erb
+++ b/app/views/musicians/index.html.erb
@@ -1,7 +1,21 @@
-<h1 class="text-center">This is the result of your search:
-</h1>
 
 
-<%= render 'musicians/cards' %>
-<%= render 'projects/cards' %>
+
+<div class="container-cards">
+  <div class="content-cards">
+
+
+    <div class="musician-cards">
+      <h1 class="text-center">This is the result of your search:
+      </h1>
+      <%= render 'musicians/cards' %>
+    </div>
+    <div class="projects-cards">
+      <h1 class="text-center">This is the result of your search:
+      </h1>
+
+      <%= render 'projects/cards' %>
+    </div>
+  </div>
+</div>
 
