--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -20,14 +20,20 @@
 
 
       <%= link_to "CREATE A PROJECT", new_project_path, class: "navbar-wagon-item navbar-wagon-link" %>
+
+
+
       <%= link_to connections_path, class: "navbar-wagon-item navbar-wagon-link"  do%>
         <i class="fa fa-users"></i>
-        <span><%= current_user.pending_friends.length %></span>
-      <% end %>
+          <span><%= current_user.pending_friends.length %></span>
+        <% end %>
+
       <%= link_to conversations_path, class: "navbar-wagon-item navbar-wagon-link"  do%>
         <i class="fa fa-envelope"></i>
         <span><%= Message.where.not(user: current_user).where(read: false).count %></span>
       <% end %>
+
+
 
       <%= link_to destroy_user_session_path, class: "navbar-wagon-item navbar-wagon-link", method: :delete do%>
           <i class="fa fa-sign-out"></i>
@@ -37,7 +43,7 @@
 
 
 
-      <!-- a: position: relative;
+      <!-- <!-- a: position: relative;
 
       span: {
     position: absolute;
@@ -47,6 +53,7 @@
     color: #bcbcbc;
     font-weight: bold;
   -->
+
 
       <%#= link_to "Connection requests: #{current_user.pending_friends.length}", connections_path, class: "navbar-wagon-item navbar-wagon-link"%>
 
