--- a/app/assets/stylesheets/projects/_comment.scss
+++ b/app/assets/stylesheets/projects/_comment.scss
@@ -4,8 +4,10 @@
   background-color: rgb(236, 236, 236);
   // justify-content: space-between;
   padding-left: 20px;
-  padding-right: 20px;
-  border-radius:16px;
+  // padding-right: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-radius:5px;
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   margin-bottom: 10px;
 }
@@ -29,6 +31,8 @@ p {
 
 .tipo-grey {
   color: #9a9da2;
+  padding: 0px;
+
 }
 
 // .form-project{
