--- a/app/assets/stylesheets/projects/_show.scss
+++ b/app/assets/stylesheets/projects/_show.scss
@@ -8,6 +8,12 @@
   // background: transparent;
 }
 
+.avatar_connection{
+  border: solid #ef4343 2px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+}
+
 .banner-project{
   display: flex;
   flex-direction: column;
