--- a/app/assets/stylesheets/layouts/_general.scss
+++ b/app/assets/stylesheets/layouts/_general.scss
@@ -1,3 +1,20 @@
-body{
+.push_down{
+  padding-top:100px;
+}
+.margin_down{
+ margin-bottom: 70px;
+}
 
-  }
+.card_friends{
+  background-color: rgb(236, 236, 236);
+  padding: 5px 70px;
+  // padding-right: 70px;
+  // padding-left: 70px;
+  // margin-right:70px;
+  // margin-top: -50px;
+  color:#35363b;
+  width: 100% ;
+  height: 370px;
+  margin-bottom: 30px;
+
+}
