--- a/app/views/connections/index.html.erb
+++ b/app/views/connections/index.html.erb
@@ -1,24 +1,29 @@
 <div class="container">
-  <div class="row">
-   <div class="col-sm-8">
-      <h1>Connections#index</h1>
+  <div class="row push_down">
+   <div class="col-sm-8 card_friends">
+      <h1>Connections</h1>
       <!-- <p>Find me in app/views/connections/index.html.erb</p> -->
 
-      <p>Your connections:</p>
-
       <% @connections.each do |connection|%>
-      <p><%= connection.first_name %> <%= connection.last_name %></p>
-      <!-- <p><%#= @musicians.first_name %></p> -->
-      <% end %>
+     <!--  <p><%= connection.first_name %> <%= connection.last_name %></p> -->
+     <%= link_to musician_path(connection) do  %>
+      <%= cl_image_tag connection.avatar, width: 70, height: 70, crop: :fill, class: "avatar_connection"  %>
+     <% end %>
+     <% end %>
 
-      <p>Your pending connections:</p>
+
+     <% if @pending_connections.size > 0 %>
+      <h3>Your pending connections:</h3>
 
       <% @pending_connections.each do |pending_connection|%>
-      <p><%= pending_connection.first_name %> <%= pending_connection.last_name %></p>
-      <p><%= pending_connection.first_name %></p>
+    <!--   <p><%= pending_connection.first_name %> <%= pending_connection.last_name %></p> -->
+       <%= link_to musician_path(pending_connection) do  %>
+      <%= cl_image_tag pending_connection.avatar, width: 70, height: 70, crop: :fill, class: "avatar_connection"  %>
+      <% end %>
       <p><%= link_to "Accept connection", accept_musician_path(pending_connection) , class: "btn btn-primary btn-lg" %></p>
       <% end %>
 
+      <% end %>
     </div>
   </div>
 </div>
