--- a/app/assets/stylesheets/layouts/_general.scss
+++ b/app/assets/stylesheets/layouts/_general.scss
@@ -5,6 +5,10 @@
  margin-bottom: 70px;
 }
 
+.margin_up{
+ margin-top: 75px;
+}
+
 .card_friends{
   background-color: rgb(236, 236, 236);
   padding: 5px 70px;
@@ -16,5 +20,6 @@
   width: 100% ;
   height: 370px;
   margin-bottom: 30px;
+  // box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 
 }
