--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,5 +1,5 @@
 
-<div class="container push_down">
+<div class="container">
   <div class="row">
     <div class="form-container col-xs-12 col-sm-6 col-sm-offset-3">
       <h2>Edit <%= resource_name.to_s.humanize %></h2>
