--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,10 +1,10 @@
 <div class="container">
-  <div class="row">
+  <div class="row margin_up">
     <div class="col-xs-12 col-sm-6 col-sm-offset-3">
       <h1>Create a project</h1>
       <%= render 'form' %>
       <br>
-      <%= link_to 'Back to projects', projects_path %>
+    <!--   <%#= link_to 'Back to project', project_path(@project) %> -->
       <br>
       <br>
     </div>
