style cards musicians

--- a/app/views/musicians/_cards.html.erb
+++ b/app/views/musicians/_cards.html.erb
@@ -1,24 +1,31 @@
- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+
+
+<!-- hover minipreview -->
+ <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script> -->
   <!-- MiniPreview stuff here -->
-  <script type="text/javascript">
-    $(function() {
-                $('#ccc a').miniPreview({ prefetch: 'pageload' });
-            });
-  </script>
+  <!-- <script type="text/javascript"> -->
+    <!-- $(function() { -->
+    <!--  $('#ccc a').miniPreview({ prefetch: 'pageload' });
+    });
+ <! </script>
+ -->
+
+
 
 <div class="container card-container">
-  <div class="row">
+  <div class="card-musician">
     <% @musicians.each do |musician| %>
-      <li class="col-xs-12 col-sm-4">
+      <div class="col-xs-12 col-sm-4 card-box">
         <div id="ccc" class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)),url('<%= cl_image_path(musician.avatar)%>');">
-          <div class="card-description">
-            <h2><%= musician.first_name + " " + musician.last_name %></h2>
-            <p><%= musician.instrument %></p>
-          </div>
+
           <%#= cl_image_tag ...photo, class: "card-user" %>
           <%= link_to "", musician_path(musician), class: "card-link" %>
         </div>
-      </li>
+        <div class="card-description">
+          <h2 class="description"><%= musician.first_name + " " + musician.last_name %></h2>
+          <p class="instrument-card"><%= musician.instrument.upcase %></p>
+        </div>
+      </div>
     <% end %>
   </div>
 </div>
