--- a/app/views/musicians/index.html.erb
+++ b/app/views/musicians/index.html.erb
@@ -2,34 +2,34 @@
 
 <!-- pruebas almu -->
 
-<!-- <div class="container-cards">
+<div class="container-cards">
   <div class="content-cards">
 
 
     <div class="musician-cards">
       <h1 class="text-center">This is the result of your search:
       </h1>
-      <#%= render 'musicians/cards' %>
+      <%= render 'musicians/cards' %>
     </div>
     <div class="projects-cards">
       <h1 class="text-center">This is the result of your search:
       </h1>
 
-      <#%= render 'projects/cards' %>
+      <%= render 'projects/cards' %>
     </div>
   </div>
 </div>
- -->
+
 
 <!-- old code -->
 
-<div>
+<!-- <div>
   <div class=results-container>
     <h1 class="text-center">This is the result of your search:</h1>
      <h2 style=color:gray>Musicians</h2>
-     <%= render 'musicians/cards' %>
+     <%#= render 'musicians/cards' %>
      <h2 style=color:gray>Projects</h2>
-     <%= render 'projects/cards' %>
+     <%#= render 'projects/cards' %>
   </div>
-</div>
+</div> -->
 
