--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,6 +1,10 @@
 // .card-container{
 //   margin-left: px;
 // }
+.container-cards{
+padding: 70px;
+background-color: #b2a8a7;
+}
 
 .card {
   height: 175px;
@@ -9,127 +13,153 @@
   background-position: center;
   color: white;
   position: relative;
-  margin-bottom: 20px;
+
 }
+.card-box{
+  background-color: rgb(236, 236, 236);
+  padding: 5px;
+  margin:5px;
+  width: 300px;
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+}
+.card-description{
+  position: absoulte;
+  margin:10px;
+
+}
+.text-center {
+  color: #35363b;
+  padding: 20px;
+}
+.description{
+  margin:0;
+}
+.instrument-card{
+  color:#877f7e;
+}
+
+// cards lewagon ------------------
 .card-user {
-  position: absolute;
-  right: 10px;
-  top: 10px;
-  width: 40px;
-  border-radius: 50%;
+  // position: absolute;
+//   // // right: 10px;
+//   // // top: 10px;
+//   // bottom: 30px;
+//   width: 40px;
+//   // border-radius: 50%;
 }
-.card-category {
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  font-size: 15px;
-  text-transform: uppercase;
-}
-.card-description {
-  position: absolute;
-  bottom: 10px;
-  left: 10px;
-}
-.card-description h2 {
-  font-size: 24px;
-}
-.card-description p {
-  font-size: 14px;
-  opacity: 0.7;
-  font-weight: lighter;
-}
-.card-link {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  width: 100%;
-  z-index: 2;
-  background: black;
-  opacity: 0;
-}
-.card-link:hover {
-  opacity: 0.1;
-  transition: 1s !important;
-  transition-delay: 1s !important;
-}
+// .card-category {
+//   // position: absolute;
+//   // // top: 10px;
+//   // bottom: 30px;
+//   // left: 10px;
+//   font-size: 15px;
+//   text-transform: uppercase;
+// }
+// .card-description {
+//   position: absolute;
+//   bottom: 10px;
+//   left: 10px;
+// }
+// .card-description h2 {
+//   font-size: 24px;
+// }
+// .card-description p {
+//   font-size: 14px;
+//   opacity: 0.7;
+//   font-weight: lighter;
+// }
+// end cards lewagon ------------------
 
-.mini-preview-anchor {
-    display: inline-block;
-    position: relative;
-    white-space: nowrap;
-}
+// hover js minipreview ------------------------
+// .card-link {
+//   position: absolute;
+//   top: 0;
+//   bottom: 0;
+//   right: 0;
+//   width: 100%;
+//   z-index: 2;
+//   background: black;
+//   opacity: 0;
+// }
+// .card-link:hover {
+//   opacity: 0.1;
+//   transition: 1s !important;
+//   transition-delay: 1s !important;
+// }
 
-.mini-preview-wrapper {
-    -moz-box-sizing: content-box;
-    box-sizing: content-box;
-    position: absolute;
-    overflow: hidden;
-    z-index: 1;
-    opacity: 1;
-    margin-top: 0px;
-    border: solid 0px #000;
-    box-shadow: 4px 4px 6px rgba(0, 0, 0, .3);
-    transition: z-index steps(1) .3s, opacity .3s, margin-top .3s;
-}
+// .mini-preview-anchor {
+//     display: inline-block;
+//     position: relative;
+//     white-space: nowrap;
+// }
 
-.mini-preview-anchor:hover {
-  opacity: 1 !important;
-}
+// .mini-preview-wrapper {
+//     -moz-box-sizing: content-box;
+//     box-sizing: content-box;
+//     position: absolute;
+//     overflow: hidden;
+//     z-index: 1;
+//     opacity: 1;
+//     margin-top: 0px;
+//     border: solid 0px #000;
+//     box-shadow: 4px 4px 6px rgba(0, 0, 0, .3);
+//     transition: z-index steps(1) .3s, opacity .3s, margin-top .3s;
+// }
 
-.mini-preview-anchor:hover .mini-preview-wrapper {
-    z-index: 2 !important;
-    opacity: 1 !important;
-    margin-top: 6px;
-    transition: opacity .3s, margin-top .3s;
+// .mini-preview-anchor:hover {
+//   opacity: 1 !important;
+// }
 
-}
+// .mini-preview-anchor:hover .mini-preview-wrapper {
+//     z-index: 2 !important;
+//     opacity: 1 !important;
+//     margin-top: 6px;
+//     transition: opacity .3s, margin-top .3s;
 
-.mini-preview-loading, .mini-preview-cover {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-}
+// }
 
-.mini-preview-loading {
-    display: table;
-    height: 100%;
-    width: 100%;
-    font-size: 1.25rem;
-    text-align: center;
-    color: #f5ead4;
-    background-color: #59513f;
-}
+// .mini-preview-loading, .mini-preview-cover {
+//     position: absolute;
+//     top: 0;
+//     bottom: 0;
+//     right: 0;
+//     left: 0;
+// }
 
-.mini-preview-loading::before {
-    content: 'Just a second...';
-    display: table-cell;
-    text-align: center;
-    vertical-align: middle;
-}
+// .mini-preview-loading {
+//     display: table;
+//     height: 100%;
+//     width: 100%;
+//     font-size: 1.25rem;
+//     text-align: center;
+//     color: #f5ead4;
+//     background-color: #59513f;
+// }
 
-.mini-preview-cover {
-    background-color: rgba(0, 0, 0, 0); /* IE fix */
-}
+// .mini-preview-loading::before {
+//     content: 'Just a second...';
+//     display: table-cell;
+//     text-align: center;
+//     vertical-align: middle;
+// }
 
-.mini-preview-frame {
-    border: none;
-    -webkit-transform-origin: 0 0;
-    transform-origin: 0 0;
-}
+// .mini-preview-cover {
+//     background-color: rgba(0, 0, 0, 0); /* IE fix */
+// }
 
-
+// .mini-preview-frame {
+//     border: none;
+//     -webkit-transform-origin: 0 0;
+//     transform-origin: 0 0;
+// }
+// end of js hover--------------------
 
 // ------------------------almu tests
-// .container-cards{
-// padding: 70px;
-// }
-// .content-cards{
+
+.content-cards{
 
 
-// }
+}
 // .musician-cards{
 //   // margin-bottom:100px;
 //   background-color:green;
@@ -140,11 +170,12 @@
 //   }
 
 // }
-// .projects-cards{
-//   background-color:red;
-//   padding: 50px 10px;
-//   h1{
-//     margin-bottom: 50px;
-//   }
-// }
+.projects-cards{
+  background-color:red;
+  padding: 50px 10px;
+  h1{
+    margin-bottom: 50px;
+  }
+}
+
 
