--- a/app/assets/stylesheets/musicians/_results.scss
+++ b/app/assets/stylesheets/musicians/_results.scss
@@ -1,10 +1,10 @@
-.results-container {
-  background-color: #35363b;
-  margin: 0 auto;
-  width: 400px;
-}
+// .results-container {
+//   background-color: #35363b;
+//   margin: 0 auto;
+//   width: 400px;
+// }
 
-.text-center {
-  color: #b2a8a7;
-  padding: 30px;
-}
+// .text-center {
+//   color: #b2a8a7;
+//   padding: 30px;
+// }
