--- a/app/views/projects/_cards.html.erb
+++ b/app/views/projects/_cards.html.erb
@@ -1,15 +1,15 @@
- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+ <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script> -->
   <!-- MiniPreview stuff here -->
-  <script type="text/javascript">
-    $(function() {
+  <!-- <script type="text/javascript"> -->
+   <!--  $(function() {
                 $('#ccc a').miniPreview({ prefetch: 'pageload' });
-            });
-  </script>
+            }); -->
+  <!-- </script> -->
 
 <div class="container card-container">
   <div class="row">
     <% @projects.each do |project| %>
-      <div class="col-xs-10 col-sm-4">
+      <div class="col-xs-10 col-sm-4 card-box">
         <div id="ccc" class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)),url('<%= cl_image_path(project.picture)%>');">
 
           <div class="card-description">
