--- a/app/views/musicians/index.html.erb
+++ b/app/views/musicians/index.html.erb
@@ -7,13 +7,13 @@
 
 
     <div class="musician-cards">
-      <h1 class="text-center">This is the result of your search:
-      </h1>
+      <h2 class="text-center">MUSICIANS IN THIS LOCATION
+      </h2>
       <%= render 'musicians/cards' %>
     </div>
     <div class="projects-cards">
-      <h1 class="text-center">This is the result of your search:
-      </h1>
+      <h2 class="text-center">PROJECTS THAT YOU CAN JOIN
+      </h2>
 
       <%= render 'projects/cards' %>
     </div>
