--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -22,6 +22,9 @@ background-color: #b2a8a7;
   width: 300px;
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
+.card-box-project{
+  width: 470px;
+}
 .card-description{
   position: absoulte;
   margin:10px;
@@ -39,14 +42,14 @@ background-color: #b2a8a7;
 }
 
 // cards lewagon ------------------
-.card-user {
+// .card-user {
   // position: absolute;
 //   // // right: 10px;
 //   // // top: 10px;
 //   // bottom: 30px;
 //   width: 40px;
 //   // border-radius: 50%;
-}
+// }
 // .card-category {
 //   // position: absolute;
 //   // // top: 10px;
@@ -156,26 +159,11 @@ background-color: #b2a8a7;
 
 // ------------------------almu tests
 
-.content-cards{
 
 
-}
-// .musician-cards{
-//   // margin-bottom:100px;
-//   background-color:green;
-//   padding: 50px 10px;
-//   margin-bottom: 50px;
-//   h1{
-//     margin-bottom: 50px;
-//   }
-
-// }
 .projects-cards{
-  background-color:red;
-  padding: 50px 10px;
-  h1{
-    margin-bottom: 50px;
-  }
+
+  // padding: 30px 10px;
 }
 
 
