--- a/app/views/connections/index.html.erb
+++ b/app/views/connections/index.html.erb
@@ -1,3 +1,4 @@
+<div class="wrapper_connections">
 <div class="container">
   <div class="row push_down">
    <div class="col-sm-8 card_friends">
@@ -26,4 +27,5 @@
       <% end %>
     </div>
   </div>
+</div>
 </div>
