--- a/app/views/messages/_replay-form.html.erb
+++ b/app/views/messages/_replay-form.html.erb
@@ -1,3 +1,4 @@
+<div class="margin_up">
 <% if @conversation %>
   <div class="panel panel-default widget good">
     <div class="panel-heading">
@@ -23,3 +24,4 @@
     No conversation yet!
   </div>
 <% end %>
+</div>
