--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -48,12 +48,7 @@
       </div>
 
       <div class="project-right">
-
-
-
-        <!--  <p><%#= link_to "New Comment", new_project_comment_path(@project) %></p> -->
-
-
+         <p class="tipo-project">NSEMBLE PEOPLE</p>
          <div>
           <%= link_to musician_path(@project.user) do  %>
 
