--- a/app/assets/stylesheets/layouts/_general.scss
+++ b/app/assets/stylesheets/layouts/_general.scss
@@ -6,7 +6,7 @@
 }
 
 .margin_up{
- margin-top: 75px;
+ margin-top: 80px;
 }
 
 .card_friends{
@@ -20,6 +20,10 @@
   width: 100% ;
   height: 370px;
   margin-bottom: 30px;
-  // box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 
+}
+
+.wrapper_connections{
+  background-color: #b2a8a7;
 }
