--- a/app/assets/stylesheets/projects/_show.scss
+++ b/app/assets/stylesheets/projects/_show.scss
@@ -1,4 +1,10 @@
-
+.tipo-project{
+padding-top:0px;
+color: #877f7e;
+font-size: 20px;
+padding-bottom: 15px;
+font-family: "Rajdhani", "sans-serif";
+}
 
 .participant {
   // border-radius: 50%;
@@ -49,13 +55,14 @@
 flex: 0 0 350px;
 margin-right: 30px;
 color: #35363b;
+
 // border: solid #ef4343 2px;
 // border-radius: 15px;
 
 }
 
 .project-background {
-background: white;
+background-color: rgb(236, 236, 236);
 padding:20px;
 box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 
