--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,6 +1,6 @@
 
 <div class="container">
-  <div class="row">
+  <div class="row margin_up margin_down">
     <div class="form-container col-xs-12 col-sm-6 col-sm-offset-3">
       <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
