--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,6 +1,17 @@
-// .card-container{
-//   margin-left: px;
-// }
+.card-container{
+  padding-left: 100px;
+}
+.zoom:hover,
+.zoom.hover {
+  -webkit-transform: scale(1.01) ;
+  transform: scale(1.01);
+}
+
+
+
+
+
+
 .container-cards{
 padding: 70px;
 background-color: #b2a8a7;
@@ -25,6 +36,7 @@ background-color: #b2a8a7;
 .card-box-project{
   width: 470px;
 }
+
 .card-description{
   position: absoulte;
   margin:10px;
@@ -41,37 +53,6 @@ background-color: #b2a8a7;
   color:#877f7e;
 }
 
-// cards lewagon ------------------
-// .card-user {
-  // position: absolute;
-//   // // right: 10px;
-//   // // top: 10px;
-//   // bottom: 30px;
-//   width: 40px;
-//   // border-radius: 50%;
-// }
-// .card-category {
-//   // position: absolute;
-//   // // top: 10px;
-//   // bottom: 30px;
-//   // left: 10px;
-//   font-size: 15px;
-//   text-transform: uppercase;
-// }
-// .card-description {
-//   position: absolute;
-//   bottom: 10px;
-//   left: 10px;
-// }
-// .card-description h2 {
-//   font-size: 24px;
-// }
-// .card-description p {
-//   font-size: 14px;
-//   opacity: 0.7;
-//   font-weight: lighter;
-// }
-// end cards lewagon ------------------
 
 // hover js minipreview ------------------------
 // .card-link {
@@ -160,10 +141,5 @@ background-color: #b2a8a7;
 // ------------------------almu tests
 
 
-
-.projects-cards{
-
-  // padding: 30px 10px;
-}
 
 
