--- a/app/views/shared/_search_bar.html.erb
+++ b/app/views/shared/_search_bar.html.erb
@@ -18,7 +18,7 @@
 <div id="custom-search-input">
   <form class="form-inline" action="/musicians" accept-charset="UTF-8" method="get">
     <div class="search-bar">
-      <input type="search" name="location" id="location" class="form-control form-control-lg" placeholder="Ex: Amsterdam">
+      <input type="search" name="location" id="location" class="form-control form-control-lg" placeholder="Search">
         <button class="btn btn-default">
             <span class=" glyphicon glyphicon-search icon-move"></span>
         </button>
