--- a/app/assets/stylesheets/layouts/_general.scss
+++ b/app/assets/stylesheets/layouts/_general.scss
@@ -18,7 +18,7 @@
   // margin-top: -50px;
   color:#35363b;
   width: 100% ;
-  height: 370px;
+  min-height: 370px;
   margin-bottom: 30px;
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 
