--- a/app/views/connections/_connection_button.html.erb
+++ b/app/views/connections/_connection_button.html.erb
@@ -6,12 +6,12 @@
           <span>Remove connection  </span><i class="fa fa-times-circle"></i>
         <% end %>
         <%elsif @musician.pending_friends.include?(current_user)%>
-      <p>You are pending connection!</p>
+      <!-- <p>You are pending connection!</p> -->
       <p><%= link_to "Remove connection", remove_musician_path(@musician) , class: "btn btn-primary btn-lg" %>
 
       </p>
     <%elsif @musician.pending_friends.include?(current_user)%>
-      <p>You are pending connection!</p>
+      <!-- <p>You are pending connection!</p> -->
       <p><%= link_to "Remove connection", remove_musician_path(@musician) , class: "btn btn-primary btn-lg" %></p>
     <%else%>
     <% if current_user != @musician %>
