--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="row">
+  <div class="row margin_up">
     <div class="col-xs-12 col-sm-6 col-sm-offset-3">
       <h1>Edit your project</h1>
       <%= render 'form' %>
