added sample musicians and projects in home page

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -9,8 +9,12 @@
 // input[type=text]:focus {
 //     width: 100%;
 // }
-
-
+.home-text{
+  margin:20px;
+}
+.text-uppercase{
+  margin:0;
+}
 
 // the code bellow is of the cards plannea (Almu)
 
