--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,65 +9,28 @@
 </div>
 
 
+
+
+<!--  musicians -->
+<div class="container">
+  <div class="row">
+    <div class="heading-title text-center">
+      <h3 class="text-uppercase">Connect with other musicians to play with </h3>
+    </div>
+    <%= render "musicians/cards" %>
+  </div>
+</div>
 <!-- code for projects -->
 <div class="container">
   <div class="row">
     <div class="heading-title text-center">
       <h3 class="text-uppercase">Join to different music projects </h3>
     </div>
-
-    <div class="col-md-3 col-sm-3">
-      <div class="team-member">
-        <div class="team-img">
-          <%= image_tag "4-piano-performance.jpg", class: "img-responsive" %>
-        </div>
-      </div>
-      <div class="team-title">
-        <h5>Amsterdam</h5>
-
-      </div>
-    </div>
-
-    <div class="col-md-3 col-sm-3">
-      <div class="team-member">
-        <div class="team-img">
-          <%= image_tag "2-guitar-performance", class: "img-responsive" %>
-        </div>
-      </div>
-      <div class="team-title">
-        <h5>Madrid</h5>
-
-      </div>
-    </div>
-
-    <div class="col-md-3 col-sm-3">
-      <div class="team-member">
-        <div class="team-img">
-          <%= image_tag "3-saxo-performance", class: "img-responsive" %>
-        </div>
-      </div>
-      <div class="team-title">
-        <h5>Amsterdam</h5>
-
-      </div>
-    </div>
-
-    <div class="col-md-3 col-sm-3">
-      <div class="team-member">
-        <div class="team-img">
-          <%= image_tag "4-piano-performance.jpg", class: "img-responsive" %>
-        </div>
-      </div>
-      <div class="team-title">
-        <h5>China</h5>
-
-      </div>
-    </div>
+    <%= render "projects/cards" %>
   </div>
 </div>
-<!--  musicians -->
 
-<div class="container">
+<!-- <div class="container">
   <div class="row">
     <div class="heading-title text-center">
       <h3 class="text-uppercase">Connect with other musicians to play with </h3>
@@ -122,9 +85,64 @@
     </div>
   </div>
 </div>
+ -->
 
+<!-- code for projects -->
+<!-- <div class="container">
+  <div class="row">
+    <div class="heading-title text-center">
+      <h3 class="text-uppercase">Join to different music projects </h3>
+    </div>
 
+    <div class="col-md-3 col-sm-3">
+      <div class="team-member">
+        <div class="team-img">
+          <%= image_tag "4-piano-performance.jpg", class: "img-responsive" %>
+        </div>
+      </div>
+      <div class="team-title">
+        <h5>Amsterdam</h5>
 
+      </div>
+    </div>
+
+    <div class="col-md-3 col-sm-3">
+      <div class="team-member">
+        <div class="team-img">
+          <%= image_tag "2-guitar-performance", class: "img-responsive" %>
+        </div>
+      </div>
+      <div class="team-title">
+        <h5>Madrid</h5>
+
+      </div>
+    </div>
+
+    <div class="col-md-3 col-sm-3">
+      <div class="team-member">
+        <div class="team-img">
+          <%= image_tag "3-saxo-performance", class: "img-responsive" %>
+        </div>
+      </div>
+      <div class="team-title">
+        <h5>Amsterdam</h5>
+
+      </div>
+    </div>
+
+    <div class="col-md-3 col-sm-3">
+      <div class="team-member">
+        <div class="team-img">
+          <%= image_tag "4-piano-performance.jpg", class: "img-responsive" %>
+        </div>
+      </div>
+      <div class="team-title">
+        <h5>China</h5>
+
+      </div>
+    </div>
+  </div>
+</div> -->
 
 
 
