--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -15,7 +15,12 @@
 .text-uppercase{
   margin:0;
 }
-
+.text-home{
+margin: 20px !important;
+}
+.projects-home{
+  margin-bottom: 70px;
+}
 // the code bellow is of the cards plannea (Almu)
 
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,200,200italic,300,300italic,400italic,600,600italic,700,700italic,900,900italic);
