--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,7 +14,7 @@
 <!--  musicians -->
 <div class="container">
   <div class="row">
-    <div class="heading-title text-center">
+    <div class="heading-title text-center text-home">
       <h3 class="text-uppercase">Connect with other musicians to play with </h3>
     </div>
     <%= render "musicians/cards" %>
@@ -22,8 +22,8 @@
 </div>
 <!-- code for projects -->
 <div class="container">
-  <div class="row">
-    <div class="heading-title text-center">
+  <div class="row projects-home">
+    <div class="heading-title text-center text-home">
       <h3 class="text-uppercase">Join to different music projects </h3>
     </div>
     <%= render "projects/cards" %>
