--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -10,7 +10,7 @@
 
   <div class="banner-content">
     <h1>CONNECTING MUSICIANS</h1>
-    <h3>Don’t dream of the gig, play it!</h3>
+    <h3>Don’t dream it, play it!</h3>
 
 
 
