--- a/app/assets/stylesheets/components/_search_bar.scss
+++ b/app/assets/stylesheets/components/_search_bar.scss
@@ -2,6 +2,7 @@
         margin:0;
         margin-top: 10px;
         padding: 0;
+        margin-left: 50px;
     }
 
     #custom-search-input .search-query {
