changed fade time in banner

--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -10,13 +10,8 @@
 
   <div class="banner-content">
     <h1>CONNECTING MUSICIANS</h1>
-    <h3>Don’t dream of the gig, play it!</h3>
-
-
-
-      <%= render 'shared/search_bar' %>
-
-  <!-- aqui va el codigo que he pegado en _search_bar -->
+    <h3>Don’t dream it, play it!</h3>
+    <%= render 'shared/search_bar' %>
 
   </div>
 
